<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1DBDB"
    tools:context=".IT19220116.Admin_Add_rider">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LNNAV"
        android:layout_below="@+id/RLHEADER">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ADDRIDERIMAGE"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/formName"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/ED_ADDRIDER_NAME"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/stroke"
                android:ems="10"
                android:hint="@string/formName"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="#959292" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/formPhone"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/ED_ADDRIDER_PHONE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/stroke"
                android:ems="10"
                android:hint="@string/formPhone"
                android:inputType="number"
                android:padding="10dp"
                android:textColorHint="#959292" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/vehive"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/ED_ADDRIDER_PLATE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/stroke"
                android:ems="10"
                android:hint="@string/vehive"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="#959292" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/licence"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/ED_ADDRIDER_LICENSE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/stroke"
                android:ems="10"
                android:hint="@string/licence"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="#959292" />

            <TextView
                android:id="@+id/d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/vehicle"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <Spinner
                android:id="@+id/spinnerVehicletye"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/stroke"
                android:dropDownWidth="wrap_content"
                android:dropDownSelector="@drawable/drop"
                android:padding="10dp"
                android:spinnerMode="dropdown"
                android:splitMotionEvents="false" />


            <Button
                android:id="@+id/BTN_ADD_RIDER_SAVE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/buttons_admin"
                android:text="@string/text_save"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/RLHEADER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3CC66">

        <TextView
            android:id="@+id/textProducts"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/addrider"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LNNAV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#E3CC66"
        android:backgroundTint="#E3CC66"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="#E3CC66"
            android:backgroundTint="#E3CC66"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/home" />

            <ImageButton
                android:id="@+id/btnOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/cart" />

            <ImageButton
                android:id="@+id/btnProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/occasion" />

            <ImageButton
                android:id="@+id/btnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                app:srcCompat="@drawable/account" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="#E3CC66"
            android:backgroundTint="#E3CC66"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="-5dp"
                android:layout_weight="0.25"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                android:text="@string/menu_home"
                android:textAlignment="center"
                android:textColor="#090909"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="0.25"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                android:text="@string/View_orders"
                android:textAlignment="center"
                android:textColor="#090909"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.25"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                android:text="@string/prod_interface"
                android:textAlignment="center"
                android:textColor="#090909"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.25"
                android:background="#E3CC66"
                android:backgroundTint="#E3CC66"
                android:text="@string/view_account"
                android:textAlignment="center"
                android:textColor="#090909"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>