...
    <string name="text_order2">1236</string>
    <string name="text_product2">Toblerone</string>
    <string name="text_quantity2">4</string>
    <string name="text_price2">LKR 1000.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_save">save</string>


    <string name="displays_product">Pack to Deliver-Dashboard</string>
    <string name="code">Item Name</string>
    <string name="name">Quantity</string>
    <string name="vw">View</string>
...
